feat: CRUD banner
